--- a/MyCalender/MyCalender/MyCalender.vcxproj.filters
+++ b/MyCalender/MyCalender/MyCalender.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="MyCalender.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="CutString.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
