--- a/MyCalender/MyCalender/MyCalender.vcxproj
+++ b/MyCalender/MyCalender/MyCalender.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CutString.cpp" />
     <ClCompile Include="MyCalender.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
